Add registration email fields

--- a/backend/src/mail-templates/template-1.html
+++ b/backend/src/mail-templates/template-1.html
@@ -166,7 +166,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td class="pc-fb-font" style="line-height: 28px; font-family: Inter, Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 300; letter-spacing: -0.2px; color: #151515" valign="top">
-                                                                                    Hola {{username}},
+                                                                                    Hola {{full_name}},
                                                                                     <br>
                                                                                     <br>
                                                                                     ¡Bienvenido a JustinaIO!
@@ -207,7 +207,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td class="pc-fb-font" style="text-align: center; line-height: 20px; letter-spacing: -0.2px; font-family: Inter, Helvetica, Arial, sans-serif; font-size: 14px; color: #ffffff" valign="top">
-                                                                                    Este correo electrónico fue enviado a <a href="mailto:{{mail}}" style="color: #ffffff; text-decoration: underline;">{{mail}}</a>
+                                                                                    Este correo electrónico fue enviado a <a href="mailto:{{email}}" style="color: #ffffff; text-decoration: underline;">{{email}}</a>
                                                                                     <br>
                                                                                     <br>
                                                                                     &copy; 2024 JustinaIO | Todos los derechos reservados
@@ -215,8 +215,6 @@
                                                                                     <a href="https://h1-12-node-react.vercel.app/" style="color: #ffffff; text-decoration: underline;">
                                                                                         justina.io
                                                                                     </a>
-                                                                                    <br>
-                                                                                    {{address}}
                                                                                 </td>
                                                                             </tr>
                                                                             <tr>
