Add link w token in welcome email, and logo attachment

--- a/backend/src/mail-templates/password-recovering.template.html
+++ b/backend/src/mail-templates/password-recovering.template.html
@@ -126,8 +126,8 @@
                                                                                         <tbody>
                                                                                             <tr>
                                                                                                 <td valign="top" style="padding: 10px 14px;">
-                                                                                                    <a href="https://h1-12-node-react.vercel.app/" style="text-decoration: none;">
-                                                                                                        <img src="https://h1-12-node-react.vercel.app/static/media/justinaHeart.12bf9beeff1d393da2066985a1a0310c.svg" width="170" alt="Justina logo" style="max-width: 100%; height: auto; border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #ffffff;">
+                                                                                                    <a href="{{front-link}}" style="text-decoration: none;">
+                                                                                                        <img src="cid:justina-logo" width="170" alt="Justina logo" style="max-width: 100%; height: auto; border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #ffffff;">
                                                                                                     </a>
                                                                                                 </td>
                                                                                             </tr>
@@ -176,7 +176,7 @@
                                                                                     <br>
                                                                                     <strong>
                                                                                         <a style="color: #1b6cc0" href="{{link}}">
-                                                                                            Registra tu contraseña aquí
+                                                                                            Cambia tu contraseña aquí
                                                                                         </a>
                                                                                     </strong>
                                                                                     <br>
@@ -212,7 +212,7 @@
                                                                                     <br>
                                                                                     &copy; 2024 JustinaIO | Todos los derechos reservados
                                                                                     <br>
-                                                                                    <a href="https://h1-12-node-react.vercel.app/" style="color: #ffffff; text-decoration: underline;">
+                                                                                    <a href="{{front-link}}" style="color: #ffffff; text-decoration: underline;">
                                                                                         justina.io
                                                                                     </a>
                                                                                 </td>
