--- a/backend/src/mail-templates/password-recovering.template.html
+++ b/backend/src/mail-templates/password-recovering.template.html
@@ -12,35 +12,35 @@
             @font-face {
                 font-family: 'Inter';
                 font-style: normal;
-                font-weight: 300;
+                font-weight: 500;
                 src: url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuOKfMZs.woff') format('woff'),
                      url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuOKfMZ0.woff2') format('woff2');
             }
             @font-face {
                 font-family: 'Inter';
                 font-style: normal;
-                font-weight: 400;
+                font-weight:600;
                 src: url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfMZs.woff') format('woff'),
                      url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfMZ0.woff2') format('woff2');
             }
             @font-face {
                 font-family: 'Inter';
                 font-style: normal;
-                font-weight: 500;
+                font-weight: 700;
                 src: url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuI6fMZs.woff') format('woff'),
                      url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuI6fMZ0.woff2') format('woff2');
             }
             @font-face {
                 font-family: 'Inter';
                 font-style: normal;
-                font-weight: 700;
+                font-weight: 800;
                 src: url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuFuYMZs.woff') format('woff'),
                      url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuFuYMZ0.woff2') format('woff2');
             }
             @font-face {
                 font-family: 'Inter';
                 font-style: normal;
-                font-weight: 800;
+                font-weight: 900;
                 src: url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuDyYMZs.woff') format('woff'),
                      url('https://fonts.gstatic.com/s/inter/v3/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuDyYMZ0.woff2') format('woff2');
             }
@@ -165,11 +165,14 @@
                                                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation">
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td class="pc-fb-font" style="line-height: 28px; font-family: Inter, Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 300; letter-spacing: -0.2px; color: #151515" valign="top">
+                                                                                <td class="pc-fb-font" style="line-height: 28px; font-family: Inter, Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 600; letter-spacing: -0.2px; color: #151515" valign="top">
                                                                                     Hola {{full_name}},
                                                                                     <br>
                                                                                     <br>
                                                                                     hemos recibido una solicitud para restaurar tus credenciales de acceso.
+                                                                                    <br>
+                                                                                    <br>
+                                                                                    Recuerda que tu nombre de usuario para ingresar a la plataforma es <b style="font-weight: 1000;">{{username}}</b>
                                                                                     <br>
                                                                                     <br>
                                                                                     Haz clic en el siguiente enlace para elegir una nueva contraseña:
@@ -183,9 +186,11 @@
                                                                                     <br>
                                                                                     Si prefieres, también puedes copiar y pegar este enlace en tu navegador:
                                                                                     <br>
-                                                                                    <a style="color: #1b6cc0" href="{{link}}">
-                                                                                        {{link}}
-                                                                                    </a>
+                                                                                    <small style="font-weight: 400;">
+                                                                                        <a style="color: #1b6cc0" href="{{link}}">
+                                                                                            {{link}}
+                                                                                        </a>
+                                                                                    </small>
                                                                                     <br>
                                                                                     <br>
                                                                                     Si tu no has solicitado un cambio de contraseña, simplemente ignora este correo.
